third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/main_with_type_parameters.exp
script {
    entry fun <SELF>_0<T1: drop, T2, T3: key>() {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ main_with_type_parameters.move:2:15
  │
2 │     entry fun <SELF>_0<T1: drop, T2, T3: key>() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
